--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,3 +119,67 @@ p {
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
   transition: transform 0.3s ease-in-out;
 }
+
+
+.rules-container {
+  padding: 40px;
+  max-width: 1000px;
+  margin: 0 auto;
+  background-color: #1c1c1c;
+  color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+.title {
+  text-align: center;
+  font-size: 2.5rem;
+  color: #ffb338; /* Gold color */
+  margin-bottom: 40px;
+  text-transform: uppercase;
+  font-family: 'Anton', sans-serif;
+  letter-spacing: 2px;
+}
+
+.rules-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.rule-item {
+  display: flex;
+  align-items: center;
+  background-color: #2e2e2e;
+  border-radius: 8px;
+  padding: 15px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.icon {
+  font-size: 30px;
+  margin-right: 20px;
+  color: #ffb338; /* Gold color for icons */
+}
+
+h3 {
+  font-size: 1.5rem;
+  color: #e1c107; /* Gold color */
+  margin-bottom: 8px;
+}
+
+p {
+  font-size: 1.1rem;
+  color: #d1d1d1;
+}
+
+@media (max-width: 768px) {
+  .rule-item {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .icon {
+    margin-bottom: 10px;
+  }
+}
